--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "deploy-storybook": "storybook build && npx storybook deploy",
+    "build:storybook": "storybook build -o ./dist-storybook"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
